# venue-recommendation

./: .gitignore  Makefile  README_HR004.md  pyproject.toml
docs/: README.md  checklist.md  workflow.md
local/opensearch/: create_index.sh  docker-compose.yml
notebooks/: analysis.ipynb
src/: config.py  consts.py  main.py  orchestrator.py  utils.py
src/agents/: __init__.py  amenity.py  base_agent.py  capacity.py  cost.py  location.py  recommend.py
src/datamodel/: api.py
src/engine/: vector_store.py
src/fastapi_app/: exception_handler.py  file_router.py  http_exception.py  main.py  openapi_tags.py  status_router.py
tests/unit/fastapi_app/: test_file_router.py
