[project]
name = "event-venue-rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "ecs-logging>=2.2.0",
    "fastapi>=0.128.0",
    "isort>=7.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain>=1.2.3",
    "opensearch-py>=3.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[tool.poe]
envfile = ".env"
